# Sort_Cut_Point_Cloud

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
include/: config.h  const.hpp  face.hpp  header.hpp  ioput.hpp  ply.h  ply.hpp  point_cloud.h  point_type.h  process.hpp  read.h  type.hpp  vertex.hpp  write.h
